<resources>
    <string name="app_name">RPG Community</string>
    <!--login-->
    <string name="btnAcessar">Acessar</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtSenha">Senha</string>
    <string name="txtBemVindo">Seja bem-vindo, aventureiro!</string>
    <string name="txtFacaLogin">Faça login e participe de inúmeras campanhas que estão te esperando!</string>
    <string name="txtEsqueceuASenha">Esqueceu a senha?</string>

    <!--Esqueci A Senha-->
    <string name="txtRecuperacao">Recuperação de senha</string>
    <string name="txtDigiteAbaixo">Digite abaixo o seu endereço de e-mail para que possamos ajudá-lo a recuperar sua senha.</string>
    <string name="txtDigiteEmail">Digite aqui o e-mail...</string>
    <string name="btnRecuperarSenha">Recuperar senha</string>

    <!--Cadastro-->
    <string name="txtCadastro">Cadastro</string>
    <string name="txtNickname">Nickname</string>
    <string name="txtNome">Nome</string>
    <string name="txtConfirmaSenha">Confirme a senha</string>
    <string name="txtNascimento">Nascimento</string>
    <string name="txtSexo">Sexo:</string>
    <string name="txtSexoMasculino">Masculino</string>
    <string name="txtSexoFeminino">Feminino</string>
    <string name="txtJaECadastrado">Já é cadastrado? Faça login</string>

    <!--Main Activity-->
    <string name="txtHome">Home</string>
    <string name="txtPerfil">Perfil</string>
    <string name="txtAmigos">Amigos</string>
    <string name="txtOutros">Outras opções</string>
    <string name="txtSessoes">Sessões</string>
    <string name="txtSolicitacoes">Solicitações de Amizade</string>
    <string name="txtConfiguracoes">Configurações</string>
    <string name="txtLogout">Logout</string>

    <!--Floating action buttons-->
    <string name="txtNovoPersonagem">Novo personagem</string>
    <string name="txtNovaSessao">Nova sessão</string>

    <!--Configurações-->
    <string name="txtPreferencias">Preferências</string>
    <string name="txtModoDiaNoite">Modo dia/noite</string>


    <!--Criar personagem-->
    <string name="txtHistoriaPersonagem">História:</string>
    <string name="txtDescricaoPersonagem">Descrição:</string>
    <string name="txtNomePersonagem">Nome:</string>
    <string name="txtHabilidadesPersonagem">Habilidades:</string>
    <string name="txtClassePersonagem">Classe:</string>
    <string name="txtSexoPersonagem">Sexo:</string>
    <string name="btnCriar">Criar</string>
    <string name="txtAddCampos">Adicionar Campos:</string>
    <string name="txtCampoPersonagem">Campo</string>
    <string name="txtValorPersonagem">Valor</string>

    <string name="txtInfoPersonagem">Informações gerais do personagem:</string>

    <!--Criar Sessão-->
    <string name="txtCriarSessao">Criar Sessão</string>
    <string name="txtDescricaoSessao">Descrição:</string>
    <string name="txtTituloSessao">Título:</string>
    <string name="txtAddSessao">Adicionar jogadores:</string>
    <string name="btnAdicionar">Adicionar...</string>
    <string name="txtSistemaDaSessao">Sistema:</string>

    <!--Sobre o Manifest-->
    <string name="txtManNovoPersonagem">Novo personagem</string>
    <string name="txtManNovaSessao">Nova sessão</string>
    <string name="txtManRegistreSe">Registre-se</string>

    <!--Fragment Perfil-->
    <string name="txtID">ID:</string>
    <string name="txtListaDePersonagens">Lista de personagens:</string>
    <string name="txtIdade">Idade:</string>
    <string name="txtNomePerfil">Nome:</string>
    <string name="txtEmailPerfil">E-mail:</string>
    <string name="txtInformacoesGerais">Informações gerais:</string>
    <string name="txtIdadeAnos"> anos</string>

    <!--EditTexts do Fragment Perfil-->
    <string name="txtFragmentID">ID</string>
    <string name="txtFragmentIdade">Idade</string>
    <string name="txtFragmentNomePerfil">Nome</string>
    <string name="txtFragmentEmailPerfil">E-mail</string>
    <string name="txtFragmentSexo">Sexo</string>

    <!--Toasts-->
    <string name="txtLogoutRealizado">Logout realizado com sucesso!</string>
    <string name="txtLogoutFoiCancelado">Logout cancelado.</string>
    <string name="txtDuploClique">Clique novamente para sair.</string>
    <string name="txtLoginRealizado">Login realizado com sucesso.</string>
    <string name="txtLoginErro">Usuário inválido!</string>
    <string name="txtResetEnviado">E-mail de reset de senha enviado com sucesso</string>

    <!--Alerts-->
    <string name="txtLogoutCerteza">Tem certeza de que deseja fazer logout?</string>
    <string name="txtLogoutTitulo">Logout</string>
    <string name="txtLogoutSim">Sim</string>
    <string name="txtLogoutNao">Cancelar</string>

    <!--List item de sessões-->
    <string name="txtSessaoNome">Sessão: </string>
    <string name="txtSessaoDescricao">Descrição: </string>
    <string name="txtSessaoSistema">Sistema: </string>
    <string name="txtSessaoTituloImagem">Imagem da sessão:</string>
    <string name="txtSessaoMestre">Mestre: </string>
    <string name="txtSessaoNumeroJogadores">Nº de jogadores: </string>
    <string name="txtSessaoId">ID da sessão: </string>

    <!--Switch e menus-->
    <string name="txtVisivelParaTodos">Visível para todos</string>
    <string name="txtPesquisa">Pesquisar...</string>
    <string name="txtEditarPersonagem">Editar personagem</string>

    <!--outros-->
    <string name="action_settings">Configurações</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voce_nao_pertence_sessoes">Você não pertence a sessões</string>
    <string name="voce_nao_possui_amigos">Você não possui amigos</string>
    <string name="voce_nao_tem_solicitacoes">Você não possui solicitações de amizade</string>
    <string name="start_session">Sessão ativa</string>
    <string name="sem_personagens">Sem personagens...</string>

    <!--Textos sobre sessoes...-->
    <string name="sessao_salva_com_sucesso">Sessão criada com sucesso!</string>
    <string name="sessao_sem_imagem">Não é possível criar uma sessão sem imagem!</string>

    <string name="editar_isso">Editar...</string>

    <string name="amigo_adicionar">Adicionar amigo</string>
    <string name="play_button_text">Participar!</string>

    <!--Tradução do chat-->
    <string name="chat_eu">~ Eu</string>
    <string name="accept_solicitation">Aceitar</string>
    <string name="txtDigiteMensagem">Digite aqui...</string>

</resources>
