<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/txtHome"/>
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/txtPerfil" />
        <item
            android:id="@+id/nav_amigos"
            android:icon="@drawable/ic_amigos"
            android:title="@string/txtAmigos" />
        <item
            android:id="@+id/nav_sessoes"
            android:icon="@drawable/ic_sessoes"
            android:title="@string/txtSessoes" />
        <item
            android:id="@+id/nav_solicitacoes"
            android:icon="@drawable/ic_sessoes"
            android:title="@string/txtSolicitacoes" />
        <!--
        <item
            android:id="@+id/nav_rascunho"
            android:icon="@drawable/ic_menu_manage"
            android:title="Rascunho" />-->
    </group>

    <item android:title="@string/txtOutros">
        <menu>
            <item
                android:id="@+id/nav_configuracoes"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/txtLogout" />
        </menu>
    </item>

</menu>
