<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EDED"
    tools:context=".fragments.PerfilFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@color/colorPrimaryDark">

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|center_vertical">

            <!--TextView da foto de perfil-->
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/avatarPerfil"
                android:src="@drawable/ic_add_avatar"
                android:background="@color/colorPrimary" />

            <!--TextView do nickname-->
            <TextView
                android:id="@+id/nicknamePerfil"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNickname"
                android:textColor="#ebebeb"
                style="@style/TextViewTitulos" />

        </LinearLayout>

        <!--*********************************************************************************-->

        <!--TextView das informações gerais-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txtInformacoesGerais"
            android:layout_marginTop="190dp"
            style="@style/TextViewTitulos"
            android:id="@+id/lblInformacoesGerais"/>

        <!--TextView ID:-->
        <TextView
            android:layout_below="@+id/lblInformacoesGerais"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/txtID"
            style="@style/TextViewComumBold"
            android:id="@+id/lblId"/>

        <!--TextView ID do usuario. Coloquei o mesmo id do Nickname, ID original: " @+id/lblIdUsuario "-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/lblInformacoesGerais"
            android:text="@string/txtFragmentID"
            style="@style/TextViewComum"
            android:id="@+id/nicknamePerfil"/>

        <!--TextView Nome:-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:layout_below="@id/lblInformacoesGerais"
            android:text="@string/txtNomePerfil"
            style="@style/TextViewComumBold"
            android:id="@+id/lblNome"/>

        <!--TextView nome do usuário-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="260dp"
            android:layout_below="@id/lblInformacoesGerais"
            android:text="@string/txtFragmentNomePerfil"
            style="@style/TextViewComum"
            android:id="@+id/lblNomeUsuario"/>

        <!--TextView E-mail:-->
        <TextView
            android:layout_below="@+id/lblId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/txtEmailPerfil"
            style="@style/TextViewComumBold"
            android:id="@+id/lblEmail"/>

        <!--TextView e-mail do usuário-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/lblId"
            android:layout_marginLeft="70dp"
            android:text="@string/txtFragmentEmailPerfil"
            style="@style/TextViewComum"
            android:id="@+id/lblEmailUsuario"/>

        <!--TextView Sexo:-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/lblEmail"
            android:layout_marginLeft="5dp"
            android:text="@string/txtSexo"
            style="@style/TextViewComumBold"
            android:id="@+id/lblSexo"/>

        <!--TextView sexo do usuário-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:layout_below="@id/lblEmail"
            android:text="@string/txtFragmentSexo"
            style="@style/TextViewComum"
            android:id="@+id/lblSexoUsuario"/>

        <!--TextView Idade:-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:layout_below="@id/lblEmail"
            android:text="@string/txtIdade"
            style="@style/TextViewComumBold"
            android:id="@+id/lblIdade"/>

        <!--TextView idade do usuário-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="260dp"
            android:layout_below="@id/lblEmail"
            android:text="@string/txtFragmentIdade"
            style="@style/TextViewComum"
            android:id="@+id/lblIdadeUsuario"/>

        <View style="@style/Linha"
            android:id="@+id/linhaSeparadora"
            android:layout_below="@id/lblSexo"/>

        <!--*********************************************************************************-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txtListaDePersonagens"
            android:layout_below="@id/linhaSeparadora"
            style="@style/TextViewTitulos"
            android:id="@+id/lblListaPersonagens"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_below="@id/lblListaPersonagens"
            android:layout_marginBottom="20dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/rvPersonagens">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>