<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Barra de busca-->
    <item
        android:id="@+id/action_search"
        android:title="@string/txtPesquisa"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <!--Settings-->
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
        -->

    <item android:id="@+id/action_editar_personagem"
        android:title="@string/txtEditarPersonagem"
        android:icon="@drawable/ic_editar"
        />

    <item android:id="@+id/menu_adicionar_amigo"
        android:title="@string/amigo_adicionar"
        />

    <item android:id="@+id/menu_excluir_amigo"
        android:title="@string/amigo_excluir"
        />

</menu>
