<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundoCinza">

    <!--
    background anterior:
    android:background="?attr/corBackground"
    -->


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/cardViewCinza"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtRecuperacao"
                style="@style/TextViewTitulos"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txtDigiteAbaixo"
                android:textSize="15dp"
                android:padding="5dp"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/txt_esqueci_a_senha"
                android:layout_below="@+id/txtConfirmeASenha"
                android:layout_margin="20dp"
                style="@style/EditTextCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textosEditText"
                android:hint="@string/txtDigiteEmail"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRecuperarSenha"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                style="@style/BotaoEstilo"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>