<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fundoCinza">

   <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

       <!--Texto Cadastro-->


       <TextView
           android:id="@+id/txtCadastroTitulo"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           android:text="@string/txtCadastro"
           style="@style/TextViewHomeBoldTitulo"
           android:textAlignment="center"/>


        <!--Campo nome-->
       <!--
       <EditText
           android:layout_below="@+id/txtCadastroTitulo"
           android:layout_width="165dp"
           android:layout_height="wrap_content"
           android:hint="@string/txtNome"
           android:singleLine="true"
           style="@style/EditTextCadastro"
           android:maxLength="15"
           android:id="@+id/txtNome"
           android:layout_alignParentRight="true"/>
           -->

        <!--Campo email-->
       <EditText
           android:layout_below="@+id/txtCadastroTitulo"
           style="@style/EditTextCadastro"
           android:singleLine="true"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/txtEmail"
           android:textColorHint="@color/textosEditText"
           android:id="@+id/txtEmail"/>


        <!--Campo senha-->
       <EditText
           android:layout_below="@+id/txtEmail"
           android:hint="@string/txtSenha"
           android:inputType="textPassword"
           style="@style/EditTextCadastro"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColorHint="@color/textosEditText"
           android:id="@+id/txtSenha"/>

        <!--Campo confirme a senha-->
       <EditText
           android:layout_marginStart="0dp"
           android:layout_marginEnd="0dp"
           android:hint="@string/txtConfirmaSenha"
           android:layout_below="@+id/txtSenha"
           android:inputType="textPassword"
           style="@style/EditTextCadastro"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColorHint="@color/textosEditText"
           android:id="@+id/txtConfirmeASenha"/>

       <!--Campo nickname-->
       <EditText
           android:id="@+id/txtNickname"
           android:layout_below="@+id/txtConfirmeASenha"
           android:layout_marginStart="0dp"
           android:layout_marginEnd="0dp"
           style="@style/EditTextCadastro"
           android:singleLine="true"
           android:maxLength="15"
           android:layout_width="165dp"
           android:layout_height="wrap_content"
           android:textColorHint="@color/textosEditText"
           android:hint="@string/txtNickname" />

       <!--MARCANDO COMO COMENTÁRIO A DATA DE NASCIMENTO E SEXO DO USUÁRIO!!!-->

       <!--Campo Data de Nascimento
       <EditText
           android:layout_marginStart="0dp"
           android:layout_marginEnd="0dp"
           android:layout_below="@+id/txtConfirmeASenha"
           style="@style/EditTextCadastro"
           android:inputType="date"
           android:maxLength="8"
           android:layout_width="110dp"
           android:layout_height="wrap_content"
           android:id="@+id/txtNascimento"
           android:hint="@string/txtNascimento"/>

       Campo de escolha de sexo
        <RadioGroup
            android:layout_below="@id/txtConfirmeASenha"
            android:layout_toRightOf="@+id/txtNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/txtSexo" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSexoMasculino" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSexoFeminino" />

        </RadioGroup>

       -->

       <!--botão-->
        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAllCaps="false"
            android:text="@string/btnCadastrar"
            android:id="@+id/btnCadastrar"
            style="@style/BotaoEstilo"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/txtNickname"
            android:textSize="21dp" />

       <!--Campo "já é cadastrado?-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/txtJaECadastrado"
            android:id="@+id/tvJaECadastrado"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:onClick="onClick"
            android:layout_below="@id/btnCadastrar"
            android:layout_gravity="center_horizontal"
            style="@style/TextViewComum"
            android:textSize="18sp"/>
   </RelativeLayout>

</ScrollView>